<resources>
    <string name="app_name">EyeLike</string>
    <string name="title_activity_nav">EyeLike</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_camera">Camera</string>
    <string name="title_search">Search</string>
    <string name="title_category">Category</string>
    <string name="title_user">User</string>
    <string name="productname">ProductName</string>
</resources>
